Version 1.94 (?? September 01)
- New function degree(v).

Version 1.93 (27 September 01)
- Use CGAL/iterator.h.
- New function TDS::create_face() to prepare for the merge TDS_2/TDS_3.
- BCC doesn't have a working std::unique_copy, so change incident_vertices().

Version 1.92 (25 September 01)
- Various fixes.

Version 1.91 (21 September 01)
- small fixes.
- doc updates.

Version 1.90 (20 September 01)
- New function find_conflicts(Point, Cell_handle, bfit, cit, ifit) in
  Delaunay.
- New star_hole(Vertex_handle, cell_begin, cell_end, Cell_handle, int) in TDS.
- New Get_one_output_iterator.
- create_star_[23] are back ans faster.
- Adds is_edge(Vertex_handle u, Vertex_handle v) in TDS.
- Adds incident_cells() and incident_vertices() templated by output iterators.
- various improvements.

Version 1.89 (18 September 01)
- Finite_vertex_iterator -> Finite_vertices_iterator, idem for cell, facet and
  edge.

Version 1.88 (17 September 01)
- Use Pointer<> directly, no need for Triangulation_*_handle_3<>.
- New internal function in Delaunay : nearest_vertex_in_cell().
- Compare_distance_3 is now required by Delaunay (moved from Hierarchy).
- Compare_[xyz]_3 and Equal_3 are replaced by Compare_xyz_3.
- SunPro, VC++ fixes.

Version 1.87 (11 September 01)
- Remove deprecated code.
- Internal classes now templated either by Tds or Tr so they are more easily
  reusable.
- New function TDS::delete_cells(begin, end).
- TDS functions now use handles instead of pointers.
- Triangulation::Vertex == TDS::Vertex.  Idem for Cell.
- Handles can't be constructed from iterators/circulators : &* is needed.
- Split *_iterators into Finite_*_iterators versions.

Version 1.86 (31 August 01)
- Remove non default constructors in [ds_]vertex and [ds_]cell.
- Move find_conflict() and insert_conflict() from the TDS to Triangulation.
- Rewrite TDS::create_star to TDS::star_hole_[23].
- New TDS internal functions change_orientation(Cell *) and
  set_adjacency(Cell *a, Cell *b, int a, int b).
